--- a/templates/account.html
+++ b/templates/account.html
@@ -48,7 +48,7 @@
         <label class="password">Change Password</label>
         <input id="password" type="password" name="password">
         <label for="about">About</label>
-        <textarea id="about" name="about"></textarea>
+        <textarea id="about" name="about">{{ escape(current_user.about) }}</textarea>
         <input type="submit" value="Update">
     </form>
 {% end %}
