messages after editing topics

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
     <script type="text/javascript" src="/static/script.js"></script>
     {% block script %}{% end %}
+    <meta name="google-site-verification" content="mkzAnp3hHgdAS3XrdITmrH28_5GX5zb61BIKLMwNCFI" />
 </head>
 
 <body>
