--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -45,11 +45,25 @@
                             anonymous
                         {% end %}
                         replied to you 
-                        {{ relative_date (comment.created) }}
+                        {{ relative_date(comment.created) }}
                         |
                         <a href="/{{ comment.topic.name }}#c{{ comment.id }}">link</a>
                     </p>
                     {{ markdown(comment.text) }}
+                </div>
+            </div>
+        {% elif message.type == 'topic_edit' %}
+            {% set edit = message.topic_edit %}
+            <div class="comment">
+                <img src="{{ edit.author.gravatar(60) }}" class="gravatar">
+                <div class="body">
+                    <p class="comment_info">
+                        <a href="/users/{{ edit.author.name }}">{{ edit.author.name }}</a>
+                        edited your topic
+                        {{ relative_date(edit.created) }}
+                        | <a href="/{{ edit.topic.name }}">link</a>
+                    </p>
+                    {{ markdown(edit.text) }}
                 </div>
             </div>
         {% end %}
