--- a/templates/account.html
+++ b/templates/account.html
@@ -11,8 +11,8 @@
         .gravatar { float: left; }
         #info { margin: 1em 0; }
         #info .body { margin-left: 120px; }
-        #password, #email { width: 250px; }
-        #about { width: 500px; height: 150px; }
+        #password, #email { width: 50%; }
+        #about { width: 80%; height: 200px; }
     </style>
 {% end %}
 
