--- a/templates/user_topics.html
+++ b/templates/user_topics.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %}
+{% extends "base.html" %}
 
 
 {% block title %}
@@ -10,7 +10,7 @@
     <h1>{{ user.name.capitalize() }}'s Topics</h1>
     <br>
     {% for topic in user.topics %}
-        {% include "../_topic_listing.html" %}
+        {% include "_topic_listing.html" %}
     {% end %}
 {% end %}
 
