--- a/templates/topic_versions.html
+++ b/templates/topic_versions.html
@@ -49,7 +49,9 @@
     <br>
     
     <div class="edit">
-        <h2 style="font-size: 1.8em">{{ escape(edit.title) }}</h2>
+        <h2 style="font-size: 1.8em">
+            <a href="/{{ topic.name }}">{{ escape(edit.title) }}</a>
+        </h2>
         <p class="comment_info">
             Edited by <a href="/users/{{ edit.author.name }}">{{ edit.author.name }}</a>
             {{ relative_date(edit.created) }}
