change welcome message profile link

--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -26,7 +26,7 @@
                 <br>
                 <a href="/community">Read the Community Guidelines</a>
                 <br>
-                <a href="/users/{{ current_user.name }}">Edit your Profile</a>
+                <a href="/account">Edit your Profile</a>
             </div>
         {% elif message.type == 'comment_reply' %}
             {% set comment = message.comment %}
