--- a/templates/user_topics.html
+++ b/templates/user_topics.html
@@ -9,8 +9,10 @@
 {% block content %}
     <h1>{{ user.name.capitalize() }}'s Topics</h1>
     <br>
-    {% for topic in user.topics %}
-        {% include "_topic_listing.html" %}
-    {% end %}
+    <table class="topic_listing">
+        {% for topic in user.topics %}
+            {% include "_topic_listing.html" %}
+        {% end %}
+    </table>
 {% end %}
 
