front page styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,17 @@
 
 {% block style %}
     <style>
-        #main { width: 800px; }
         #about {
             color: #333;
             padding: 1.5em;
             font-size: 1.1em;
             background-color: #EEE;
-            width: 600px;
+            width: 550px;
             margin: auto;
-            margin-bottom: 2em;
+            margin-bottom: 1.5em;
             border-radius: 7px;
+            -moz-border-radius: 7px;
+            -webkit-border-radius: 7px;
             border: 1px solid #DDD;
         }
         #about p {
@@ -49,5 +50,4 @@
             <td class="info2"></td></td>
         {% end %}
     </table>
-
 {% end %}
