--- a/templates/topic.html
+++ b/templates/topic.html
@@ -78,7 +78,8 @@
         </div>
     </div>
     
-    <h2 style="color:#666666;">Comments</h2>
+    <br>
+    <h2 style="color:#555;margin-top: 1em;">Comments</h2>
     
     <div id="reply_box" class="comment" {% if not replies %}style="display:block;"{% end %}>
         {% if current_user %}
