--- a/static/style.css
+++ b/static/style.css
@@ -17,19 +17,18 @@ em { font-style: italic; }
 p, blockquote { margin-bottom: 1.2em; }
 
 h1, h2, h3, h4, h5 {
-    color: #202020;
+    color: inherit;
     line-height: 1.4em;
     margin: 1em 0 0.5em;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a {
-    color: #303030;
+    color: inherit;
     text-decoration: none;
 }
 
 h1 { font-size: 2em; }
-h2, h3 { color: #202020; }
 h2 { font-size: 1.5em; }
-h3 { font-size: 1.1em; }
+h3 { font-size: 1.1em; font-weight: bold; }
 
 label { color: #6d6c6c; }
 
@@ -109,9 +108,6 @@ textarea {
     text-decoration: underline;
 }
 #header #nav a.inbox {
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
     background: #67b6cf;
     color: white;
     text-decoration: none;
@@ -133,6 +129,8 @@ textarea {
     padding: 0.5em;
     background-color: #EEE;
     border-radius: 7px;
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
     border: 1px solid #DDD;
     text-align: center;
     width: 500px;
@@ -143,26 +141,28 @@ textarea {
 #message.error { background-color: #F8ECEF; border: 1px solid #e0bac7;}
 
 
-.topic_listing td {
+.topic_listing tr {
     border-top: 1px solid #eee;
-    padding: 1.5em 1em;
+}
+.topic_listing tr:first-child {
+    border: none;
+}
+.topic_listing td.info {
+    color: #6d6c6c; 
+    font-weight: 200;
+    width: 22%;
+    text-align: right;
+    padding: 1.2em;
 }
 .topic_listing td.title {
-    width: 60%;
+    padding: 1.2em;
+    width: 78%;
 }
 .topic_listing h2 {
     margin: 0;
 }
-.topic_listing td.info,
-.topic_listing td.info2 {
-    color: #6d6c6c; 
-    font-weight: 200;
-    width: 20%;
-    
-}
-.topic_listing .info {
-    text-align: right;
-}
+
+
 
 .gravatar { border-radius: 4px; }
 
@@ -178,7 +178,6 @@ textarea {
     float: left;
     margin: 0 1em;
 }
-
 .comment .body {
     padding: 0 2em;
     margin-left: 80px;
