welcome msg tweak

--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -19,7 +19,7 @@
     {% for message in messages %}
         {% if message.type == 'welcome' %}
             <div class="comment">
-                <p class="comment_info"><b>Welcome to {{ current_site.title }}!</b> What's next?</p>
+                <p class="comment_info"><b>Welcome to {{ current_site.title }}!</b> &nbsp;What's next?</p>
                 <a href="/">Browse recent topics</a>
                 <br>
                 <a href="/submit">Submit a topic</a>
