topic listings show points instead of author.  topic edits shown as such.  shorter inbox messages

--- a/static/style.css
+++ b/static/style.css
@@ -193,7 +193,7 @@ a.vote_down {
     border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
-    background: #93d6ea;
+    background: #A9E4F4;
     color: white;
     text-decoration: none;
     padding: 0 0.3em;
