--- a/templates/_topic_listing.html
+++ b/templates/_topic_listing.html
@@ -1,14 +1,19 @@
 <tr>
     <td class="info">
-        {% if topic.author %}
-            <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>
-        {% else %}
-            anonymous
+        {% if not current_user %}
+            <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
+        {% elif topic.can_vote_up(current_user) %}
+            <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.name }}">+</a>
         {% end %}
+        {% if topic.can_vote_down(current_user) %}
+            / <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.name }}">-</a>
+        {% end %}
+        <span class="points">
+            {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
+        </span>
         <br>
         {{ relative_date(topic.created) }}
     </td>
-    
     <td class="title">
         <h2>
             <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
