link to versions for topic edit message

--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -84,7 +84,7 @@
                     edited your topic
                     "{{ escape(edit.title) }}"
                     {{ relative_date(edit.created) }}
-                    | <a href="/{{ edit.topic.name }}">link</a>
+                    | <a href="/{{ edit.topic.name }}/versions">link</a>
                 </p>
             </div>
         {% end %}
