--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -21,7 +21,9 @@
     {% for message in messages %}
         {% if message.type == 'welcome' %}
             <div class="comment">
-                <p class="comment_info"><b>Welcome to {{ current_site.title }}!</b> &nbsp;What's next?</p>
+                <p style="font-weight: 200;">
+                    <b>Welcome to {{ current_site.title }}!</b> &nbsp;What's next?
+                </p>
                 <a href="/">Browse recent topics</a>
                 <br>
                 <a href="/submit">Submit a topic</a>
@@ -83,7 +85,7 @@
                     <a href="/users/{{ edit.author.name }}">{{ edit.author.name }}</a>
                     edited your topic
                     "{{ escape(edit.title) }}"
-                    {{ relative_date(edit.created) }}
+                    {{ relative_date(message.created) }}
                     | <a href="/{{ edit.topic.name }}/versions">link</a>
                 </p>
             </div>
