--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,10 @@
         .topic_title {
             font-size: 1.7em;
         }
-        .topic {
-            margin-bottom: 3em;
+        .topic_listing_front {
+            padding-bottom: 1.5em;
+            border-bottom: 1px solid #eee;
+            margin-bottom: 1.5em;
         }
     </style>
 {% end %}
@@ -45,34 +47,41 @@
     {% end %}
     
     {% for topic in topics %}
-        <h2 class="topic_title">
-            <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
-        </h2>
-        
-        <div class="topic" style="border:none;">
-            <p class="comment_info">
-                {% if not current_user %}
-                    <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
-                {% elif topic.can_vote_up(current_user) %}
-                    <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.name }}">+</a>
-                {% end %}
-                {% if topic.can_vote_down(current_user) %}
-                    / <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.name }}">-</a>
-                {% end %}
-                <span class="points">
-                    {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
-                </span>
-                
-                {% if topic.author %}
-                    by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>{% for editor in topic.editors %}, <a href="/users/{{ editor }}">{{ editor }}</a>{% end %}
+        <div class="topic_listing_front">
+            <h2 class="topic_title">
+                <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
+            </h2>
+            
+            <div class="topic" style="border:none;">
+                <p class="comment_info">
+                    {% if not current_user %}
+                        <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
+                    {% elif topic.can_vote_up(current_user) %}
+                        <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.name }}">+</a>
+                    {% end %}
+                    {% if topic.can_vote_down(current_user) %}
+                        / <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.name }}">-</a>
+                    {% end %}
+                    <span class="points">
+                        {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
+                    </span>
+                    
+                    {% if topic.author %}
+                        by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>{% for editor in topic.editors %}, <a href="/users/{{ editor }}">{{ editor }}</a>{% end %}
+                    {% else %}
+                        by anonymous
+                    {% end %}
+                    
+                    {{ relative_date(topic.created) }}
+                </p>
+                <div class="body">
+                    {{ markdown(topic.text) }}
+                </div>
+                {% if topic.n_comments %}
+                    <a href="/{{ topic.name }}">{{ topic.n_comments }} comments</a>
                 {% else %}
-                    by anonymous
+                    <a href="/{{ topic.name }}">discuss</a>
                 {% end %}
-                
-                {{ relative_date(topic.created) }}
-            </p>
-            <div class="body">
-                {{ markdown(topic.text) }}
             </div>
         </div>
     {% end %}
